# pychangcooper

./: .codeclimate.yml  .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  codecov.yaml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: build_test.yml  docs.yml
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/notebooks/: demo.ipynb  heat_accel.ipynb  heat_accel.md  intro.ipynb  intro.md  synchrotron.ipynb  synchrotron.md
docs/source/: modules.rst  pychangcooper.rst  pychangcooper.scenarios.rst  pychangcooper.utils.rst
examples/: demo.ipynb  testing.ipynb
pychangcooper/: __init__.py  __version__.py  _version.py  chang_cooper.py  synchrotron_cooling.py  synchrotron_emission.py  tridiagonal_solver.py
pychangcooper/io/: fill_plot.py
pychangcooper/photons/: emission_kernel.py  photon_emitter.py  synchrotron_emission.py  synchrotron_kernal.py
pychangcooper/scenarios/: continuous_powerlaw_injection.py  generic_cooling.py  generic_cooling_acceleration.py  generic_cooling_component.py  synchrotron_cooling.py  synchrotron_cooling_acceleration.py
pychangcooper/test/: test_base_constructor.py  test_scenarios.py  test_tridiagonal_solver.py
pychangcooper/utils/: cmap_intervals.py  progress_bar.py
